# HackNES.rs

./: .gitignore  Cargo.toml  LICENSE  README.md  test_rom_generator.py
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: apu.rs  bus.rs  bus_old.rs  cartridge.rs  cartridge_old.rs  controller.rs  cpu.rs  cpu_old_backup.rs  error.rs  lib.rs  memory_editor.rs  ppu.rs  ppu_old.rs
crates/web/: Cargo.toml  README.md  index.html
crates/web/src/: lib.rs
docs/: architecture.md
