[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HackNES.rs contributors"]
license = "MIT"
repository = "https://github.com/indigoblue6/HackNES.rs"

[workspace.dependencies]
# コア機能
nes_core = { path = "crates/core" }

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ロギング
log = "0.4"
env_logger = "0.11"

# CLI用
sdl2 = "0.37"
clap = { version = "4.5", features = ["derive"] }

# Web用
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
